# double-pendulum-playground

./: .gitignore  README.md  eval.py  inverted_double_pendulum.py  inverted_double_pendulum_mjx.py  mjx_env.py  new_pendulum.xml  pyproject.toml  render_pretty.py  sim_pendulum.py  sim_pendulum_mjx.py  train.py  vis_config.yml
jax/: eval.py  eval_jax.py  inverted_double_pendulum_mjx.py  models.py  ppo.py  run_jax.py  train.py  train_brax.py  wrappers.py
xml/: new_pendulum.xml  pendulum_og.xml
